--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://123.207.19.16:63306/jobsee??useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://123.207.19.16:63306/jobsee?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=198497
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
