--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: java
 jdk:
   - openjdk8
-script: 
-  - chmod +x gradlew
+install: true
+before_script:
+  - chmod +x gradlew  
+script:  
   - ./gradlew bootJar
