--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,10 @@ before_script:
   - chmod +x gradlew  
 script:  
   - ./gradlew bootJar
+  
+deploy:
+  provider: releases
+  user: "xiaoqlster@gmail.com "
+  password: "caohaofen057922"
+  file: "rrrr.jar"
+  skip_cleanup: true
