--- a/.drone.yml
+++ b/.drone.yml
@@ -2,6 +2,7 @@ pipeline:
   build:
     image: gradle:jdk8
     commands:
-      - gradle build
-
+      - gradle bootJar    
+    volumes:
+     - :/home/gradle
 branches: ["master"]
