--- a/.drone.yml
+++ b/.drone.yml
@@ -4,5 +4,5 @@ pipeline:
     commands:
       - gradle bootJar    
     volumes:
-     - :/home/gradle
+     - ${PWD}:/home/gradle
 branches: ["master"]
