--- a/.drone.yml
+++ b/.drone.yml
@@ -5,4 +5,4 @@ pipeline:
       - gradle bootJar    
     volumes:
      - ${PWD}:/home/gradle
-branches: ["master","dev"]
+branches: ["master","dev1"]
