--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+def env = System.getProperty("repository") ?: "dev"
+
 buildscript {
     ext {
         springBootVersion = '2.0.3.RELEASE'
@@ -19,10 +21,9 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories { 
-    maven { url 'http://172.16.0.17:8081/repository/maven-central/' }
-    mavenCentral()
+    maven { url 'http://123.207.19.16:8081/repository/maven-central' }
+//    mavenCentral()
 }
-
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
@@ -32,7 +33,8 @@ dependencies {
     compile group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
     compile group: 'com.google.guava', name: 'guava', version: '25.1-jre'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.11'
+}
 
-
-
+task prdWrapper(type: Wrapper) {
+    distributionUrl "http://172.16.0.17/gradle-4.8.1-bin.zip"
 }
