--- a/.drone.yml
+++ b/.drone.yml
@@ -5,4 +5,8 @@ pipeline:
       - chmod a+x gradlew  
       - ./gradlew build
     cpu_shares: 50
+    
+  publish:
+    image: plugins/docker
+    tag: [ ${DRONE_BUILD_NUMBER} ]   
 branches: ["master","dev6"]
