--- a/.drone.yml
+++ b/.drone.yml
@@ -8,5 +8,6 @@ pipeline:
     
   publish:
     image: plugins/docker
-    tag: [ ${DRONE_BUILD_NUMBER} ]   
+    tag: 
+     - ${DRONE_BUILD_NUMBER}   
 branches: ["master","dev6"]
