--- a/.drone.yml
+++ b/.drone.yml
@@ -9,6 +9,7 @@ pipeline:
   publish:
     image: plugins/docker
     cpu_shares: 50
+    repo: jobsee
     tag: 
      - v${DRONE_BUILD_NUMBER}   
 branches: ["master","dev6"]
