--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-web')
     runtime('mysql:mysql-connector-java')
-    compileOnly('org.projectlombok:lombok')
+    compile('org.projectlombok:lombok')
     compile group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
     compile group: 'com.google.guava', name: 'guava', version: '25.1-jre'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.11'
